--- a/demystify.tex
+++ b/demystify.tex
@@ -1414,10 +1414,6 @@ The most common type of funding is \textbf{graduate assistantship}, which is eit
 
 Several things about stipends.  First, the amount of stipend \emph{varies} and depends on factors such as location (e.g., a stipend in the DC area is likely higher than in Lincoln, Nebraska due to higher living costs). Second, an academic year (AY)  year is typically \emph{9-month} in the US, so the stipend is for 9 months. Third, you might get paid over the summer (\autoref{sec:summer-funding}) through funding from your professor or fellowship (typically no TA over the summer). Fourth, like most sources of income in the US, you will have to \emph{pay tax} on your stipend.  Finally, private universities might pay more for stipends, but they could have extra activity fees or some other hidden ones (e.g., you may need to pay some fees for each credit hour).
 
-\paragraph{Low Stipend?} Students sometimes complain about their stipend being low. However, in most cases it is not bad, and you can live comfortably with it.  It might also be enough to support your spouse and kids (many CS PhD students have their families with them). So don't worry too much about the stipend.  If you're admitted to a good CS PhD program, you will be fine. A good school would know that it has to be competitive to attract students.  For example, at Mason, every year we try to improve the benefits, and especially stipend, for our graduate students.
-
-For a full breakdown of how much a graduate student costs, see \autoref{sec:ra-cost}.
-
 
 \begin{commentbox}[Vu:]
   TA and RA at Mason have similar benefits in tuition waiving and insurance.  The college and department will set the rate for a 9-month graduate assistant stipend.  TA, which is paid by the department, will likely be that amount but RA might be higher depending on  the prof and the stage of the student (1st year vs ABD\footnote{All but dissertation: close to graduate.}).\\
@@ -1477,6 +1473,18 @@ Prestigious external fellowships typically require a clear and good research pla
 In general, fellowships, especially those that are open to everyone, are highly competitive and prestigious, and you will stand out if you get one.  Every PhD student has pubs, but only a few would have NSF Graduate (GRFP\footnote{\url{https://www.alexhunterlang.com/nsf-fellowship} is a good starting place for the GRFP with lots of proposal examples.}) or Microsoft fellowships. In fact, these are so prestigious that even if you didn't get it but make it to the final round or even \emph{``honorable mentioning''}, your school will still mention you on their website, and you should put it on your CV. \autoref{chap:fellowships} discusses the evaluation processes of the NSF GRFP and DoD NDSEG.
 
 \section{Miscs}
+
+
+\subsection{Low Stipend?}\label{sec:low stipend}
+
+Students often think their stipend is too low and not enough to live on.  For example, if you look at the stipend at Mason, which is around \$30K for 9-month, and then compare it to the cost of living in Fairfax, VA, which says you need \$70K to live in a 1-bed apartment, then you might be in a panic.
+
+However,  in almost all cases, the stipend is enough to live on.  You might not be able to live in a 1-bed apartment by yourself, but you can live in a shared apartment or house with other students (most grad students shared apt).  You might not be able to buy a new car, but you can use public transportation (actually, most my students buy a used car after being here for a year or so).  In short, while the stipend is not high, it is not bad, and you can live comfortably with it.  
+
+In fact, it might also be enough to support your spouse and kids.  Many CS PhD students have their families with them (a student of mine lives with his wife and 1 kid in a 1-bed apartment and they are doing fine with just his stipend). So don't worry too much about the stipend.  A good school would know that it has to be competitive to attract students.  For example, at Mason, every year we try to improve the benefits, and especially stipend, for our graduate students.
+
+For a full breakdown of how much a graduate student costs, see \autoref{sec:ra-cost}.
+
 
 \subsection{Funding In the Summer}\label{sec:summer-funding}
 
