--- a/demystify.tex
+++ b/demystify.tex
@@ -1481,7 +1481,7 @@ Students often think their stipend is too low and not enough to live on.  For ex
 
 However,  in almost all cases, the stipend is enough to live on.  You might not be able to live in a 1-bed apartment by yourself, but you can live in a shared apartment or house with other students (most grad students shared apt).  You might not be able to buy a new car, but you can use public transportation (actually, most my students buy a used car after being here for a year or so).  In short, while the stipend is not high, it is not bad, and you can live comfortably with it.  
 
-In fact, it might also be enough to support your spouse and kids.  Many CS PhD students have their families with them (a student of mine lives with his wife and 1 kid in a 1-bed apartment and they are doing fine with just his stipend). So don't worry too much about the stipend.  A good school would know that it has to be competitive to attract students.  For example, at Mason, every year we try to improve the benefits, and especially stipend, for our graduate students.
+In fact, it might be enough to support your spouse and kids.  Many CS PhD students have their families with them (a student of mine lives with his wife and 1 kid in a 1-bed apartment and they are doing fine with just his stipend). So don't worry too much about the stipend.  A good school would know that it has to be competitive to attract students.  For example, at Mason, every year we try to improve the benefits, and especially stipend, for our graduate students.
 
 For a full breakdown of how much a graduate student costs, see \autoref{sec:ra-cost}.
 
