--- a/demystify.tex
+++ b/demystify.tex
@@ -1720,48 +1720,48 @@ Tenured faculty, e.g., associate and full profs., are likely older, more well-kn
 % This is a good question and there doesn't seem to be any best answer or specific algorithm that you can use.  But I'll throw out something for you to think about. To me, there are many good schools in the US and so you have some leeway in choosing.  For example, I don't believe there's much difference among schools in top 5 (e.g., CMU, UIUC, UCSD, MIT, GTech are in the same equivalent class), top 10 (e.g., Michigan,  Stanford, UWash, UC-Berkeley, Cornell is another equivalent class), top 20, top 30, top 40, and so on (though I would say schools above 100 are pretty much in the same equivalent class).  It's hard to say a top X is much much better than a top X+20 (e.g.,  Purdue at 15 is stronger than Yale at 35, but not \emph{that much} stronger as you would think).  So keep that in mind, while ranking does matter (e.g., more active faculty, stronger students), the lower ranked universities are still pretty good, might have sub fields that are extremely strong (NCState is 40th, but in Software Engineering it is easily top 5), and many unique things.  This is in contrast with universities in Vietnam where there are large gaps among the top 5, 10, and so on.
 
 
-\section{Research Achievements}\label{sec:research-achievements}
+% \section{Research Achievements}\label{sec:research-achievements}
 
-While a strong match in personalities and research interests is important, many students also consider the faculty's research achievements.  The general metrics are papers, citations, students (current and graduated), etc.  However, these metrics might not be accurate (e.g., in AI/ML, even students often have a lot of citations because the field is hot and many people cite their papers). 
+% While a strong match in personalities and research interests is important, many students also consider the faculty's research achievements in choosing an adviser.  The general metrics include papers, citations, and current and graduated students.  However, these metrics might not sufficient and can be misleading (e.g., fields like ML generate high citations quickly, even for unpublished papers).  
 
-Thus, you should look beyond these metrics and consider the quality of the work and their impact on the field, and the reputation and the ability to obtain funding from the faculty.  These are typically measured by prestigious awards and recognitions, which are often more important than the number of papers or citations and highlighted in their CV and even on the department or university website.
+% Thus, you should look beyond these metrics and consider the quality of the work and their impact, and the reputation of the faculty and the ability to obtain funding. These are typically measured by prestigious awards and recognitions for long term impact, competitive research grants and awards, and leadership and service in the research community. 
 
-\paragraph{Prestigious Career Awards \& Recognition}
-Highly productive researchers often receive competitive career awards that recognize their long-term potential. Some of the most prestigious awards include:
-\begin{itemize}
-    \item \textbf{NSF CAREER Award (US)} – A significant early-career award given to faculty demonstrating research and educational excellence.
-    \item \textbf{Sloan Fellowship} – Recognizes young faculty with exceptional potential.
-    \item \textbf{DoD YIP (Young Investigator Program)} – Awarded to early-career researchers in defense-related fields.
-    \item \textbf{ACM/IEEE Fellows} – Reserved for researchers with long-term contributions and leadership in computing fields.
-    \item \textbf{Turing Award} – The highest honor in computer science (if your potential adviser has one, you already know they are a giant in the field).
-\end{itemize}
-These awards indicate long-term impact and recognition from the research community. If an adviser has received any of these, it suggests a strong reputation and high research productivity.
+% \paragraph{Prestigious Career Awards \& Recognition}
+% Highly productive researchers often receive competitive career awards that recognize their long-term potential. Some of the most prestigious awards include:
+% \begin{itemize}
+%     \item \textbf{NSF CAREER Award (US)} – A significant early-career award given to faculty demonstrating research and educational excellence.
+%     \item \textbf{Sloan Fellowship} – Recognizes young faculty with exceptional potential.
+%     \item \textbf{DoD YIP (Young Investigator Program)} – Awarded to early-career researchers in defense-related fields.
+%     \item \textbf{ACM/IEEE Fellows} – Reserved for researchers with long-term contributions and leadership in computing fields.
+%     \item \textbf{Turing Award} – The highest honor in computer science (if your potential adviser has one, you already know they are a giant in the field).
+% \end{itemize}
+% These awards indicate long-term impact and recognition from the research community. If an adviser has received any of these, it suggests a strong reputation and high research productivity.
 
-\paragraph{Research Awards \& Long-Term Recognition}
-Awards for research impact—especially those that recognize work over time—are strong indicators of high-quality contributions. Examples include:
-\begin{itemize}
-    \item \textbf{Test of Time Awards} – Given to papers that have remained influential over a decade or more.
-    \item \textbf{Most Influential Paper Awards} – Typically awarded at major conferences for research that has shaped the field.
-    \item \textbf{10-Year Impact Awards} – Recognizing papers that have had sustained influence over a decade.
-\end{itemize}
-If a potential adviser has won one or more of these, it means their research is not just productive but also has lasting significance.
+% \paragraph{Research Awards \& Long-Term Recognition}
+% Awards for research impact—especially those that recognize work over time—are strong indicators of high-quality contributions. Examples include:
+% \begin{itemize}
+%     \item \textbf{Test of Time Awards} – Given to papers that have remained influential over a decade or more.
+%     \item \textbf{Most Influential Paper Awards} – Typically awarded at major conferences for research that has shaped the field.
+%     \item \textbf{10-Year Impact Awards} – Recognizing papers that have had sustained influence over a decade.
+% \end{itemize}
+% If a potential adviser has won one or more of these, it means their research is not just productive but also has lasting significance.
 
-\paragraph{Development of Highly Influential Research Tools}
-Beyond papers, research tools that are widely used in academia or industry signify real-world impact. Some key indicators include:
-\begin{itemize}
-    \item \textbf{Tools used in major companies or open-source projects} – If a tool from their lab is integrated into industry workflows (e.g., compilers, verification tools, ML frameworks), it’s a sign of practical impact.
-    \item \textbf{Winning research competitions} – Many fields have benchmark competitions (e.g., SAT solvers, automated theorem provers, AI competitions). Winning or being a top contender in these suggests that the lab is leading cutting-edge research.
-    \item \textbf{Tools included in major software stacks} – If a tool is widely cited or included in standard toolchains (e.g., LLVM, Z3, TensorFlow), it indicates strong adoption.
-\end{itemize}
-Some departments list major research awards and influential software projects on their website. If an adviser’s name appears frequently in such lists, it’s a strong endorsement of their impact.
+% \paragraph{Development of Highly Influential Research Tools}
+% Beyond papers, research tools that are widely used in academia or industry signify real-world impact. Some key indicators include:
+% \begin{itemize}
+%     \item \textbf{Tools used in major companies or open-source projects} – If a tool from their lab is integrated into industry workflows (e.g., compilers, verification tools, ML frameworks), it’s a sign of practical impact.
+%     \item \textbf{Winning research competitions} – Many fields have benchmark competitions (e.g., SAT solvers, automated theorem provers, AI competitions). Winning or being a top contender in these suggests that the lab is leading cutting-edge research.
+%     \item \textbf{Tools included in major software stacks} – If a tool is widely cited or included in standard toolchains (e.g., LLVM, Z3, TensorFlow), it indicates strong adoption.
+% \end{itemize}
+% Some departments list major research awards and influential software projects on their website. If an adviser’s name appears frequently in such lists, it’s a strong endorsement of their impact.
 
-\paragraph{Research Publications in Top Venues}
-While individual papers can be impressive, a more reliable measure of a researcher's productivity is the \textbf{sum of their publications in top-tier conferences and journals}.
-\begin{itemize}
-    \item Look for publications in the highest-impact conferences of the field (e.g., NeurIPS, ICML, CVPR for AI/ML; PLDI, OOPSLA, POPL for programming languages; FSE, ICSE for software engineering).
-    \item Be cautious about citation counts—fields like AI/ML generate high citations quickly, even for unpublished papers. Instead, focus on where and how often they publish.
-    \item A high volume of recent publications in top venues suggests an active and productive lab.
-\end{itemize}
+% \paragraph{Research Publications in Top Venues}
+% While individual papers can be impressive, a more reliable measure of a researcher's productivity is the \textbf{sum of their publications in top-tier conferences and journals}.
+% \begin{itemize}
+%     \item Look for publications in the highest-impact conferences of the field (e.g., NeurIPS, ICML, CVPR for AI/ML; PLDI, OOPSLA, POPL for programming languages; FSE, ICSE for software engineering).
+%     \item Be cautious about citation counts—fields like AI/ML generate high citations quickly, even for unpublished papers. Instead, focus on where and how often they publish.
+%     \item A high volume of recent publications in top venues suggests an active and productive lab.
+% \end{itemize}
 
 \paragraph{External Research Grants \& Funding}
 The ability to secure funding is a sign of research productivity and lab stability. Some key points to consider:
@@ -2678,24 +2678,3 @@ Also thanks to NSF for encouraging faculty to be creative in research and educat
 %\bibliography{demystify.bib}
 
 \end{document}
-
-
-
-
-Dear Dr. K, 
-
-I am very happy to hear that you plan to write a short blurp about VuPhong and VuLam’s chess achievements.  I thought I would provide some additional context just in case it helps.  
-
-This is a PWCS chess tournament for K-12 kids (http://chess.tylerlargen.com/).  It has been around for quite sometime, probably 10+ years.  While it is PWCS, it is opened for anyone and I’ve seen teams from various parts of NOVA, including Alexandria and Arlington.   
-
-The tournament is categorized into groups including  K—3 ,  4-5,  middle schools, high schools.  Each kid will play 4 matches.  If you win, you get 1 point.  If you draw, each player has .5 point.  So 4 points is the perfect scores and indicate you won all matches.  3.5 points means you won 3 out of 4 games and draw 1.  If multiple kids have the same points, then the computer will randomly pick the order because trophies are numbered 1st, 2nd, 3rd, etc.   So if there are 2 kids with 4 pts, and 3 kids with 3.5 points, and 2 kids with 3 points, then the first 2 kids will be given 1st and 2nd place, the 3 kids with 3.5 points are given 3rd -- 5th place, and the 2 kids with 3 points are 6th and 7th.
-
-
-For the last tournament on Feb 15,  both VuPhong (3rd grade) and VuLam (K) played in the K-3 group. They were the only two from Marshall.   VuLam won all of his matches and get perfect score.  There was another kid that also get the perfect score.  So the two of them are undefeated in their group and share first place but VuLam's trophy shows 2nd. 
-VuPhong also did very well, winning 3 out of 4 matches and get 3 points and get 4th place.  So they both get trophies.  
-
-I do not really understand how team scores are calculated though it seems like the sum of the scores are used.  
-
-
-VuPhong also did very well, winning 3 out of 4 matches and get 3.5 points.  He was the only one with 3.5 points and thus got 3rd place.  So both of them got trophies.  I think this is the first time that Marshall has two kids in the top 3.  I am very proud of them.
-
