--- a/demystify.tex
+++ b/demystify.tex
@@ -1240,6 +1240,26 @@ Even if you can't come in person, you should attend virtually and meet with indi
 
 Also, do not forget to update and thank your LoR writers and others who have supported you through this process.
 
+\section{The offer letters and terms}
+One of the most important things to consider when you receive an offer is the terms of the offer, i.e., your funding package. 
+This is essentially an employment contract, and you need to sign it to accept the offer.  
+
+Read this carefully and make sure you understand it. 
+Most relevant information is the stipend, tuition waiver, and health insurance. the letter might also indicate additional information such as the duration of the offer for TA or who you would be working with for RA, etc.  The letter might also have some conditions, e.g., maintaining a certain GPA, etc. It might also have a deadline for you to accept the offer, e.g., April 15.
+
+\autoref{fig:gra-offer} shows an example of a GRA offer letter from Mason. It shows the 9-month stipend, tuition waiver, and health insurance.  It also states the prof. that offers the RA and other conditions (e.g., mtaining a 3.0 GPA and receiving satisfactory grades) which are relatively standard. 
+
+
+\begin{figure}
+    \begin{tabular}{c|c}
+        \includegraphics[page=1,width=.65\textwidth]{files/gra_offer.pdf} & 
+        \includegraphics[page=2,width=.65\textwidth]{files/gra_offer.pdf} 
+    \end{tabular}
+    \caption{An example of a GRA offer letter.}\label{fig:gra-offer}
+\end{figure}
+%\includepdf[pages=1]{files/gra_offer.pdf}
+
+
 
 \section{Checking Status, Accepting, Postponing, and Decline Offers}\label{sec:accept-postpone-decline}
 
