--- a/demystify.tex
+++ b/demystify.tex
@@ -1240,21 +1240,21 @@ Even if you can't come in person, you should attend virtually and meet with indi
 
 Also, do not forget to update and thank your LoR writers and others who have supported you through this process.
 
-\section{The offer letters and terms}
+\section{Offer Letters and Terms}
 One of the most important things to consider when you receive an offer is the terms of the offer, i.e., your funding package. 
-This is essentially an employment contract, and you need to sign it to accept the offer.  
+This is essentially an employment contract, and you likely need to sign it to accept the offer.  
 
-Read this carefully and make sure you understand it. 
-Most relevant information is the stipend, tuition waiver, and health insurance. the letter might also indicate additional information such as the duration of the offer for TA or who you would be working with for RA, etc.  The letter might also have some conditions, e.g., maintaining a certain GPA, etc. It might also have a deadline for you to accept the offer, e.g., April 15.
+Most relevant information includes the stipend, tuition waiver, and health insurance. The letter might also indicate additional information such as the duration of the offer for TA or who you would be working with for RA, etc.  The letter might also have some conditions, e.g., maintaining a certain GPA, etc. It might also have a deadline for you to accept the offer, e.g., April 15.
 
-\autoref{fig:gra-offer} shows an example of a GRA offer letter from Mason. It shows the 9-month stipend, tuition waiver, and health insurance.  It also states the prof. that offers the RA and other conditions (e.g., mtaining a 3.0 GPA and receiving satisfactory grades) which are relatively standard. 
+
+\autoref{fig:gra-offer} shows an example of a GRA offer letter from Mason. It shows the 9-month stipend\footnote{Note that RA often get additional summer funding from their prof. (\autoref{sec:summer-funding}).}, the funding source (i.e., the prof. who provided the RA), tuition waivers (9-credit, which is full time for grad student), and health insurance.
+
+It is unlikely that you can negotiate things like stipend and such, as it is standard across all students.  However, you might ask your prof. for additional funding, e.g., for conference travel, etc. See~\autoref{sec:negotiate} for more information on negotiating offers. 
 
 
 \begin{figure}
-    \begin{tabular}{c|c}
-        \includegraphics[page=1,width=.65\textwidth]{files/gra_offer.pdf} & 
-        \includegraphics[page=2,width=.65\textwidth]{files/gra_offer.pdf} 
-    \end{tabular}
+    \centering
+    \includegraphics[page=1,width=.80\textwidth]{files/gra_offer.pdf} & 
     \caption{An example of a GRA offer letter.}\label{fig:gra-offer}
 \end{figure}
 %\includepdf[pages=1]{files/gra_offer.pdf}
