--- a/demystify.tex
+++ b/demystify.tex
@@ -1240,7 +1240,10 @@ Even if you can't come in person, you should attend virtually and meet with indi
 
 Also, do not forget to update and thank your LoR writers and others who have supported you through this process.
 
-\section{Offer Letters and Terms}
+\section{Offer Letters and Terms}\label{sec:offer-letters}
+\sectioninfo{The offer letter is essentially an employment contract.  Make sure to read and understand the terms of the offer.}
+
+
 One of the most important things to consider when you receive an offer is the terms of the offer, i.e., your funding package. 
 This is essentially an employment contract, and you likely need to sign it to accept the offer.  
 
