--- a/demystify.tex
+++ b/demystify.tex
@@ -1257,7 +1257,7 @@ It is unlikely that you can negotiate things like stipend and such, as it is sta
 
 \begin{figure}
     \centering
-    \includegraphics[page=1,width=.80\textwidth]{files/gra_offer.pdf} & 
+    \includegraphics[page=1,width=.80\textwidth]{files/gra_offer.pdf} 
     \caption{An example of a GRA offer letter.}\label{fig:gra-offer}
 \end{figure}
 %\includepdf[pages=1]{files/gra_offer.pdf}
