--- a/demystify.tex
+++ b/demystify.tex
@@ -1250,7 +1250,7 @@ This is essentially an employment contract, and you likely need to sign it to ac
 Most relevant information includes the stipend, tuition waiver, and health insurance. The letter might also indicate additional information such as the duration of the offer for TA or who you would be working with for RA, etc.  The letter might also have some conditions, e.g., maintaining a certain GPA, etc. It might also have a deadline for you to accept the offer, e.g., April 15.
 
 
-\autoref{fig:gra-offer} shows an example of a GRA offer letter from Mason. It shows the 9-month stipend\footnote{Note that RA often get additional summer funding from their prof. (\autoref{sec:summer-funding}).}, the funding source (i.e., the prof. who provided the RA), tuition waivers (9-credit, which is full time for grad student), and health insurance.
+\autoref{fig:gra-offer} shows an example of a GRA offer letter from Mason. It shows the 9-month stipend\footnote{Note that while not explicitly specified in the offer, RAs often get additional summer funding from their prof. (\autoref{sec:summer-funding}).}, the funding source (i.e., the prof. who provided the RA), tuition waivers (9-credit, which is full time for grad student), and health insurance.
 
 It is unlikely that you can negotiate things like stipend and such, as it is standard across all students.  However, you might ask your prof. for additional funding, e.g., for conference travel, etc. See~\autoref{sec:negotiate} for more information on negotiating offers. 
 
